tests/ui/throw_any_without_type.stderr
error: `any` requires a type: `throw any Type(e) { ... }`
 --> tests/ui/throw_any_without_type.rs:8:19
  |
8 |         throw any e { "transformed" }
  |                   ^
